tests/misc/fallback_test/expected/059_backtick_crash.php.expected
src/059_backtick_crash.php:3 PhanSyntaxError syntax error, unexpected '`'
